--- a/website/app/names.html
+++ b/website/app/names.html
@@ -27,7 +27,9 @@
 
 <div class="container">
   <h1 class="col-md-12 header" id="title">the nouwweb project</h1>
-
+  <div id="nav">
+    <a href="/"><- back</a>
+  </div>
   <div id="content"><div id="img"><img src="images/loader.gif"></img></div></div>
 
 </div>
@@ -73,7 +75,7 @@
         <!-- endbuild -->
 
         <script src="http://fb.me/react-0.10.0.js"></script>
-        <!-- build:js scripts/main.js -->
+        <!-- build:js scripts/bundle.js -->
         <script src="scripts/filters.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
