--- a/website/app/index.html
+++ b/website/app/index.html
@@ -67,7 +67,7 @@
 
   <div class="col-md-8">
     <div class="col-md-12">
-      <div class="col-md-6">
+      <div class="col-md-12">
         <h3 class="col-md-11">
           <a href="">
             /districts
@@ -78,9 +78,9 @@
         </p>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-12">
         <h3 class="col-md-11">
-          <a href="">
+          <a href="names.html">
             /names
           </a>
         </h3>
@@ -90,34 +90,11 @@
       </div>
     </div>
 
-    <div class="col-md-12">
-      <div class="col-md-6">
-        <h3 class="col-md-11">
-          <a href="">
-            /parties
-          </a>
-        </h3>
-        <p class="col-md-11">
-          Data about the political parties in the parliament.
-        </p>
-      </div>
-
-      <div class="col-md-6">
-        <h3 class="col-md-11">
-          <a href="">
-            /sects
-          </a>
-        </h3>
-        <p class="col-md-11">
-          Data about the sects represented in the parliament.
-        </p>
-      </div>
-    </div>
 
     <div class="col-md-12">
-      <div class="col-md-6">
+      <div class="col-md-12">
         <h3 class="col-md-11">
-          <a href="">
+          <a href="http://nouwweb.readthedocs.org/">
             /search
           </a>
         </h3>
