--- a/website/app/index.html
+++ b/website/app/index.html
@@ -46,18 +46,18 @@
         fix <a href="https://github.com/kamicut/legislators/issues">open issues</a> or share new ideas!
       </li>
       <li>
-        maybe gather data 
+        gather data 
       </li>
       <li>
         or report inaccuracies in our data
       </li>
       <li>
-        use our tools to build your own project! (and <a href="">tell us</a> about it)
+        use our tools to build your own project! (and <a href="github.com/kamicut/legislators/issues">tell us</a> about it)
       </li>
     </ul>
 
     <p>
-      More about <a href="">why we're doing this</a>.
+      <!--More about <a href="">why we're doing this</a>. -->
     </p>
 
     <p>
