--- a/website/app/names.html
+++ b/website/app/names.html
@@ -8,6 +8,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css styles/vendor.css -->
+        <link rel="stylesheet" href="bower_components/chosen_v1.1.0/chosen.css"></script>
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
@@ -52,10 +53,13 @@
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
 
+
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap.js"></script>
+        <script src="bower_components/react/react.min.js"></script>
+        <script src="bower_components/chosen_v1.1.0/chosen.jquery.min.js"></script>
+        <script src="bower_components/react-chosen/react-chosen.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -74,7 +78,7 @@
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
         <!-- endbuild -->
 
-        <script src="http://fb.me/react-0.10.0.js"></script>
+
         <!-- build:js scripts/bundle.js -->
         <script src="scripts/filters.js"></script>
         <script src="scripts/main.js"></script>
